# diffqcp

./: .gitignore  README.md  cone_refactor.md  final_refactor.md  jax_sparse_playground.py  jax_transform_playground.py  main.py  playground.py  pyproject.toml  sandbox.py  todos.md
.github/workflows/: python-publish.yml  test.yml
diffqcp/: __init__.py  _helpers.py  _linops.py  _problem_data.py  _qcp_derivs.py  cone_derivs.py  cone_program.py  cones.py  deriv.py  exp_cone.py  linops.py  lsqr.py  pow_cone.py  problem_data.py  proj_exp_cone.py  qcp.py  qcp_deriv.py  qcp_derivs.py  qcp_func.py  utils.py
diffqcp/cones/: _abstract_projector.py  abstract_projector.py  canonical.py  exp.py  pow.py
experiments/: basic_experiments.py  compare_gradients.py  compare_gradients2.py  cone_grad_desc_playground.py  cpu_baseline.py  cpu_experiment.py  cvx_problem_generator.py  direct_solve_experiment.py  gpu_experiment.py  heterogeneous_experiment.py  heterogeneous_experiment2.py  paperV1_experiments.py  paper_experiment_diffqcp.py  plot_results.py  sdp_diffqcp_cpu.py  utils.py  zero_counting.py
experiments/results/results_20250612-210857/: experiment_log.txt
tests/: conftest.py  helpers.py  test_cone_program_diff.py  test_cone_projectors.py  test_deriv_atoms.py  test_diffqcp_analytical.py  test_diffqcp_fdiffs.py  test_linops.py  test_probdata.py  test_projection_functionality.py  test_qcp_analytical.py  test_qcp_cpu_analytical.py  test_qcp_gpu_analytical.py  test_utils.py  utils.py
